# download-aptnotes

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  makedata.py  mypy.ini  pyproject.toml  requirements.txt
aptnotes_download/: __init__.py  __main__.py  cli.py  downloading.py  main.py  parsing.py  saving.py  utils.py
download_aptnotes/: __init__.py  cli.py  downloading.py  main.py  parsing.py  saving.py  utils.py
maked/: downloading.py  main.py  parsing.py  saving.py
makingdata/: downloading.py  parsing.py  saving.py
