[tool.poetry]
name = "aptnotes-download"
version = "0.1.0"
description = "Simple CLI to download and/or parse aptnotes."
authors = ["nikstur"]
readme = "README.md"

[tool.poetry.scripts]
aptnotes-download = "aptnotes_download.main:app"

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.5.0"
aiohttp = "^3.6.2"
beautifulsoup4 = {extras = ["lxml"], version = "^4.9.1"}
tika = "^1.24"
typer = {extras = ["all"], version = "^0.3.1"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
bandit = "^1.6.2"
mypy = "^0.782"
flake8 = "^3.8.3"
isort = "^5.4.1"
pytest = "^6.0.1"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
